package domain.solicitudes;

public enum PosibleEstado {
  PENDIENTE,
  CONFIRMADA,
  RECHAZADA
}
